Attempting again to fix the issue where the logo is partially covered by the navigation bar.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,7 @@ header {
 
 .main-logo {
 	width: 15em;
-	margin: -3em;
+	/*margin: -3em;*/
 }
 
 .header-date {
